objects/Case/fields/Account_Match_Method__c.field-meta.xml
<CustomField>
    <fullName>Account_Match_Method__c</fullName>
    <label>Account Match Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer_Number</fullName>
                <label>Customer Number</label>
            </value>
            <value>
                <fullName>Email_Domain</fullName>
                <label>Email Domain</label>
            </value>
            <value>
                <fullName>Account_ID</fullName>
                <label>Account ID</label>
            </value>
            <value>
                <fullName>Name_Fuzzy</fullName>
                <label>Name Fuzzy Match</label>
            </value>
            <value>
                <fullName>Address_Fuzzy</fullName>
                <label>Address Fuzzy Match</label>
            </value>
            <value>
                <fullName>Manual_Override</fullName>
                <label>Manual Override</label>
            </value>
            <value>
                <fullName>No_Match</fullName>
                <label>No Match Found</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>