objects/Case/fields/Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Attention_To__c</fullName>
    <label>Attention To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>