objects/Case/fields/Classification_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Classification_Confidence__c</fullName>
    <label>Classification Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>