objects/Case/fields/Classification_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Classification_Outcome__c</fullName>
    <label>Classification Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correct_First_Touch</fullName>
                <label>Correct First Touch</label>
            </value>
            <value>
                <fullName>Sent_To_Review</fullName>
                <label>Sent To Review</label>
            </value>
            <value>
                <fullName>Override_Applied</fullName>
                <label>Override Applied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>