objects/Case/fields/Classification_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Classification_Rationale__c</fullName>
    <label>Classification Rationale</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>