objects/Case/fields/Classification_Result__c.field-meta.xml
<CustomField>
    <fullName>Classification_Result__c</fullName>
    <label>Classification Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales_Order</fullName>
                <label>Sales Order</label>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Noise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>