objects/Case/fields/Classification_Signals__c.field-meta.xml
<CustomField>
    <fullName>Classification_Signals__c</fullName>
    <label>Classification Signals</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>