objects/Case/fields/Gate1_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gate1_Notes__c</fullName>
    <description>Notes from the Gate 1 extraction — either AI extraction notes/confidence from the prompt, or the reason manual review is required (unsupported file types, multiple attachments).</description>
    <label>Gate 1 Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>