objects/Case/fields/Gate1_Status__c.field-meta.xml
<CustomField>
    <fullName>Gate1_Status__c</fullName>
    <description>Status of the Gate 1 order detail extraction. Set automatically by the Gate 1 flow when OCR Complete is checked.</description>
    <label>Gate 1 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Manual Review Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>