objects/Case/fields/OCR_Complete__c.field-meta.xml
<CustomField>
    <fullName>OCR_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by the OCR process when attachment text extraction is complete. Triggers Gate 1 order detail extraction flow.</description>
    <label>OCR Complete</label>
    <type>Checkbox</type>
</CustomField>