objects/Case/fields/Override_Notes__c.field-meta.xml
<CustomField>
    <fullName>Override_Notes__c</fullName>
    <label>Override Notes</label>
    <type>TextArea</type>
</CustomField>