objects/Case/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email intent misread</fullName>
            </value>
            <value>
                <fullName>Attachment not detected by AI</fullName>
            </value>
            <value>
                <fullName>Known procurement system / sender</fullName>
            </value>
            <value>
                <fullName>Duplicate — PO already received</fullName>
            </value>
            <value>
                <fullName>Not an order — sent in error</fullName>
            </value>
            <value>
                <fullName>NAF misclassified as order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>