objects/Case/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <description>Full shipping address extracted by the Gate 1 prompt (informational — surfaced to the rep, not used for structured shipping logic).</description>
    <label>Ship To Address</label>
    <type>TextArea</type>
</CustomField>