objects/Case/fields/Shipping_Preference__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Preference__c</fullName>
    <label>Shipping Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Expedited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>