objects/Case/fields/Triage_Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Triage_Reviewed_At__c</fullName>
    <label>Triage Reviewed At</label>
    <type>DateTime</type>
</CustomField>